Added second fetch and updated website

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1>Charlotte Weather</h1>
-    <div id="output"></div>
+    <h1>Weather</h1>
+    <div id="output">
+      <p id="location">Loading...</p>
+      <p id="temp">Loading...</p>
+      <p id="sunrise"></p>
+      <p id="sunset"></p>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
